Update logo and hero

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Koena Health - Workshops to elevate and enrich your wellness journey">
     <meta property="og:description"
         content="Holistic retreats, workshops, and naturopathy services for mind, body, and spirit.">
-    <meta property="og:image" content="https://naomiserkez/img/logo.jpeg">
+    <meta property="og:image" content="https://naomiserkez/img/ns.png">
     <meta property="og:url" content="https://naomiserkez.com">
     <meta property="og:type" content="website">
 
@@ -22,8 +22,9 @@
 <body class="bg-stone-100 text-stone-800">
     <!-- Header -->
     <header class="bg-stone-200 shadow">
-        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <h1 class="text-xl font-bold text-stone-800">Naomi Serkez</h1>
+        <div class="container mx-auto px-6 py-2 flex justify-between items-center">
+            <!-- <h1 class="text-xl font-bold text-stone-800">Naomi Serkez</h1> -->
+            <img src="assets\img\nslogo_nobg.png" alt="Naomi Serkez" class="w-12 h-12">
             <nav class="space-x-6">
                 <a href="#about" class="text-stone-600 hover:text-stone-900">About</a>
                 <a href="#projects" class="text-stone-600 hover:text-stone-900">Projects</a>
@@ -36,7 +37,7 @@
     <section class="bg-stone-50 py-20">
         <div class="container mx-auto text-center">
             <h2 class="text-4xl font-bold text-stone-900">Hi, I'm Naomi</h2>
-            <p class="text-stone-600 mt-4">I’m a passionate software engineer exploring the world of technology.</p>
+            <p class="text-stone-600 mt-4">I’m a software engineer, cyber enthusiast, and all around jack(iella?) of all trades.</p>
             <a href="#projects"
                 class="mt-6 inline-block bg-orange-500 text-white py-2 px-6 rounded hover:bg-orange-600">View My
                 Work</a>
@@ -58,7 +59,7 @@
     <!-- Projects Section -->
     <section id="projects" class="bg-stone-50 py-20">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-stone-800 text-center">My Projects</h2>
+            <h2 class="text-3xl font-bold text-stone-800 text-center">What I've Done</h2>
             <div class="grid gap-6 mt-8 sm:grid-cols-2 lg:grid-cols-3">
                 <!-- Project Card -->
                  <!-- for all images, ratio is 2:1 (width:height) -->
