Update og metadata

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="Koena Health - Workshops to elevate and enrich your wellness journey">
-    <meta property="og:description"
-        content="Holistic retreats, workshops, and naturopathy services for mind, body, and spirit.">
-    <meta property="og:image" content="https://naomiserkez/img/ns.png">
+    <meta property="og:title" content="Naomi Serkez - Portfolio">
+    <meta property="og:description" content="Portfolio website for Naomi Serkez, software engineer">
+    <meta property="og:image" content="assets/img/ns.png">
     <meta property="og:url" content="https://naomiserkez.com">
     <meta property="og:type" content="website">
 
@@ -37,7 +36,8 @@
     <section class="bg-stone-50 py-20">
         <div class="container mx-auto text-center">
             <h2 class="text-4xl font-bold text-stone-900">Hi, I'm Naomi</h2>
-            <p class="text-stone-600 mt-4">I’m a software engineer, cyber enthusiast, and all around jack(iella?) of all trades.</p>
+            <p class="text-stone-600 mt-4">I’m a software engineer, cyber enthusiast, and all around jack(iella?) of all
+                trades.</p>
             <a href="#projects"
                 class="mt-6 inline-block bg-orange-500 text-white py-2 px-6 rounded hover:bg-orange-600">View My
                 Work</a>
@@ -62,12 +62,13 @@
             <h2 class="text-3xl font-bold text-stone-800 text-center">What I've Done</h2>
             <div class="grid gap-6 mt-8 sm:grid-cols-2 lg:grid-cols-3">
                 <!-- Project Card -->
-                 <!-- for all images, ratio is 2:1 (width:height) -->
+                <!-- for all images, ratio is 2:1 (width:height) -->
                 <div class="bg-white shadow-md rounded-lg overflow-hidden">
                     <img src="assets/img/essential_oil_background.jpeg" alt="Koena" class="w-full">
                     <div class="p-4">
                         <h3 class="font-bold text-lg">Koena Health</h3>
-                        <p class="text-stone-600 mt-2">I created the website for a naturopathic company offering aromatherapy, health, and wellness workshops.</p>
+                        <p class="text-stone-600 mt-2">I created the website for a naturopathic company offering
+                            aromatherapy, health, and wellness workshops.</p>
                         <a href="#" class="text-blue-500 hover:underline mt-2 block">Visit Koena</a>
                     </div>
                 </div>
@@ -83,8 +84,10 @@
                     <img src="assets/img/polyomino1.jpeg" alt="Hackathon" class="w-full">
                     <div class="p-4">
                         <h3 class="font-bold text-lg">Hack It Together Hackathon 2024</h3>
-                        <p class="text-stone-600 mt-2">My Team created a program to efficiently place 2-d  polyomino shapes in a grid, minimizing extra space.</p>
-                        <a href="https://github.com/serkez/Hackathon_2024" class="text-blue-500 hover:underline mt-2 block">View Code</a>
+                        <p class="text-stone-600 mt-2">My Team created a program to efficiently place 2-d polyomino
+                            shapes in a grid, minimizing extra space.</p>
+                        <a href="https://github.com/serkez/Hackathon_2024"
+                            class="text-blue-500 hover:underline mt-2 block">View Code</a>
                     </div>
                 </div>
                 <!-- Add more project cards as needed -->
@@ -116,11 +119,13 @@
                             d="M113,145c-141.4,0-256,114.6-256,256s114.6,256,256,256s256-114.6,256-256S254.4,145,113,145z M41.4,508.1H-8.5V348.4h49.9 V508.1z M15.1,328.4h-0.4c-18.1,0-29.8-12.2-29.8-27.7c0-15.8,12.1-27.7,30.5-27.7c18.4,0,29.7,11.9,30.1,27.7 C45.6,316.1,33.9,328.4,15.1,328.4z M241,508.1h-56.6v-82.6c0-21.6-8.8-36.4-28.3-36.4c-14.9,0-23.2,10-27,19.6 c-1.4,3.4-1.2,8.2-1.2,13.1v86.3H71.8c0,0,0.7-146.4,0-159.7h56.1v25.1c3.3-11,21.2-26.6,49.8-26.6c35.5,0,63.3,23,63.3,72.4V508.1z" />
                     </svg>
                 </a>
-                <a href="https://www.github.com/serkez" aria-label="GitHub" class="text-orange-500 hover:text-orange-600">
+                <a href="https://www.github.com/serkez" aria-label="GitHub"
+                    class="text-orange-500 hover:text-orange-600">
                     <svg class="w-10 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M12 0C5.372 0 0 5.372 0 12c0 5.302 3.438 9.8 8.205 11.387.6.111.82-.261.82-.577v-2.234c-3.338.726-4.042-1.416-4.042-1.416-.546-1.387-1.333-1.757-1.333-1.757-1.091-.746.083-.731.083-.731 1.205.084 1.838 1.236 1.838 1.236 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.605-2.665-.305-5.466-1.335-5.466-5.93 0-1.31.468-2.38 1.236-3.22-.123-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.3 1.23a11.48 11.48 0 013.003-.404c1.02.004 2.047.138 3.003.404 2.29-1.552 3.297-1.23 3.297-1.23.654 1.653.242 2.874.12 3.176.77.84 1.233 1.91 1.233 3.22 0 4.61-2.807 5.62-5.475 5.92.43.37.823 1.096.823 2.21v3.283c0 .32.216.694.825.576C20.565 21.796 24 17.297 24 12c0-6.628-5.372-12-12-12z"/>
+                        <path
+                            d="M12 0C5.372 0 0 5.372 0 12c0 5.302 3.438 9.8 8.205 11.387.6.111.82-.261.82-.577v-2.234c-3.338.726-4.042-1.416-4.042-1.416-.546-1.387-1.333-1.757-1.333-1.757-1.091-.746.083-.731.083-.731 1.205.084 1.838 1.236 1.838 1.236 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.605-2.665-.305-5.466-1.335-5.466-5.93 0-1.31.468-2.38 1.236-3.22-.123-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.3 1.23a11.48 11.48 0 013.003-.404c1.02.004 2.047.138 3.003.404 2.29-1.552 3.297-1.23 3.297-1.23.654 1.653.242 2.874.12 3.176.77.84 1.233 1.91 1.233 3.22 0 4.61-2.807 5.62-5.475 5.92.43.37.823 1.096.823 2.21v3.283c0 .32.216.694.825.576C20.565 21.796 24 17.297 24 12c0-6.628-5.372-12-12-12z" />
                     </svg>
-                </a>                
+                </a>
             </div>
         </div>
     </section>
