Update og image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Naomi Serkez - Portfolio">
     <meta property="og:description" content="Portfolio website for Naomi Serkez, software engineer">
-    <meta property="og:image" content="assets/img/ns.png">
+    <meta property="og:image" content="https://naomiserkez.com/assets/img/ns.png">
     <meta property="og:url" content="https://naomiserkez.com">
     <meta property="og:type" content="website">
 
