--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <h3 class="font-bold text-lg">Koena Health</h3>
                             <p class="text-stone-600 mt-2">I created the website for a naturopathic company offering
                                 aromatherapy, health, and wellness workshops.</p>
-                            <a href="#" class="text-blue-500 hover:underline mt-2 block">Visit Koena</a>
+                            <a href="#" class="text-orange-500 hover:underline mt-2 block">Visit Koena</a>
                         </div>
                     </div>
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
@@ -82,11 +82,11 @@
                                 implemented testing into a codebase and created new features with Vue.js.</p>
                             <!-- <a href="https://artcentercanvas.com/" class="text-blue-500 hover:underline mt-2 inline-block">Visit Art Center Canvas</a> -->
                             <a href="https://www.linkedin.com/in/naomiserkez/details/experience/"
-                                class="text-blue-500 hover:underline mt-2 inline-block">Learn More</a>
+                                class="text-orange-500 hover:underline mt-2 inline-block">Learn More</a>
                         </div>
                     </div>
                 </div>
-                <!-- <button id="work-toggle" class="text-blue-500 hover:underline mt-4 block mx-auto">Show More</button>
+                <!-- <button id="work-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show More</button>
                 <div id="work-extra" class="hidden">
                      Additional Work items go here -->
                 <!-- </div> -->
@@ -103,7 +103,7 @@
                             <p class="text-stone-600 mt-2">My Team created a program to efficiently place 2-d polyomino
                                 shapes in a grid, minimizing extra space.</p>
                             <a href="https://github.com/serkez/Hackathon_2024"
-                                class="text-blue-500 hover:underline mt-2 block">View Code</a>
+                                class="text-orange-500 hover:underline mt-2 block">View Code</a>
                         </div>
                     </div>
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
@@ -113,7 +113,7 @@
                             <p class="text-stone-600 mt-2">A Java-based multithreaded simulation of a
                                 distributed system with communication between client, master, and worker
                                 programs over sockets.</p>
-                            <a href="" class="text-blue-500 hover:underline mt-2 block"></a>
+                            <a href="" class="text-orange-500 hover:underline mt-2 block"></a>
                         </div>
                     </div>
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
@@ -122,12 +122,12 @@
                             <h3 class="font-bold text-lg">Naomi's Website</h3>
                             <p class="text-stone-600 mt-2">I created a portfolio website to show the work I've done and
                                 to tell you a bit about me.</p>
-                            <a href="#" class="text-blue-500 hover:underline mt-2 block" id="self-link">View Website</a>
+                            <a href="#" class="text-orange-500 hover:underline mt-2 block" id="self-link">View Website</a>
                         </div>
                     </div>
 
                 </div>
-                <button id="projects-toggle" class="text-blue-500 hover:underline mt-4 block mx-auto">Show More</button>
+                <button id="projects-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show More</button>
                 <div id="projects-extra" class="hidden">
                     <!-- Additional Project items go here -->
                 </div>
@@ -144,12 +144,12 @@
                             <p class="text-stone-600 mt-2">I completed 24 tasks covering a wide array of security,
                                 networking, and pentesting topics, improving my cyber skills.</p>
                             <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-GZIP2SW3CI.pdf"
-                                class="text-blue-500 hover:underline mt-2 block">View Certificate</a>
+                                class="text-orange-500 hover:underline mt-2 block">View Certificate</a>
                         </div>
                     </div>
                     <!--  Add up to 3 Continued Learning items
                 </div>
-                <button id="education-toggle" class="text-blue-500 hover:underline mt-4 block mx-auto">Show
+                <button id="education-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show
                     More</button>
                 <div id="education-extra" class="hidden">
                      Additional Continued Learning items go here -->
@@ -207,7 +207,7 @@
             alert("You are already here, silly!");
         });
     </script>
-    
+
 </body>
 
 </html>
