Update Project links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <h3 class="font-bold text-lg">Koena Health</h3>
                             <p class="text-stone-600 mt-2">I created the website for a naturopathic company offering
                                 aromatherapy, health, and wellness workshops.</p>
-                            <a href="#" class="text-orange-500 hover:underline mt-2 block">Visit Koena</a>
+                            <a href="https://serkez.github.io/koena_health" class="text-orange-500 hover:underline mt-2 block">Visit Koena(permanent URL coming soon)</a>
                         </div>
                     </div>
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
