--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
 
                 </div>
-                <button id="projects-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show More</button>
+                <!-- <button id="projects-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show More</button> -->
                 <div id="projects-extra" class="hidden">
                     <!-- Additional Project items go here -->
                 </div>
