--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <h3 class="font-bold text-lg">Koena Health</h3>
                             <p class="text-stone-600 mt-2">I created the website for a naturopathic company offering
                                 aromatherapy, health, and wellness workshops.</p>
-                            <a href="https://serkez.github.io/koena_health" class="text-orange-500 hover:underline mt-2 block">Visit Koena(permanent URL coming soon)</a>
+                            <a href="https://serkez.github.io/koena_health" class="text-orange-500 hover:underline mt-2 block"  target="_blank">Visit Koena(permanent URL coming soon)</a>
                         </div>
                     </div>
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
@@ -82,7 +82,7 @@
                                 implemented testing into a codebase and created new features with Vue.js.</p>
                             <!-- <a href="https://artcentercanvas.com/" class="text-blue-500 hover:underline mt-2 inline-block">Visit Art Center Canvas</a> -->
                             <a href="https://www.linkedin.com/in/naomiserkez/details/experience/"
-                                class="text-orange-500 hover:underline mt-2 inline-block">Learn More</a>
+                                class="text-orange-500 hover:underline mt-2 inline-block" target="_blank">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                             <p class="text-stone-600 mt-2">My Team created a program to efficiently place 2-d polyomino
                                 shapes in a grid, minimizing extra space.</p>
                             <a href="https://github.com/serkez/Hackathon_2024"
-                                class="text-orange-500 hover:underline mt-2 block">View Code</a>
+                                class="text-orange-500 hover:underline mt-2 block" target="_blank">View Code</a>
                         </div>
                     </div>
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
@@ -144,7 +144,7 @@
                             <p class="text-stone-600 mt-2">I completed 24 tasks covering a wide array of security,
                                 networking, and pentesting topics, improving my cyber skills.</p>
                             <a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-GZIP2SW3CI.pdf"
-                                class="text-orange-500 hover:underline mt-2 block">View Certificate</a>
+                                class="text-orange-500 hover:underline mt-2 block" target="_blank">View Certificate</a>
                         </div>
                     </div>
                     <!--  Add up to 3 Continued Learning items
@@ -172,7 +172,7 @@
             <div class="mt-6 flex justify-center space-x-6">
 
                 <a href="https://www.linkedin.com/in/naomiserkez" aria-label="LinkedIn"
-                    class="text-orange-500 hover:text-orange-600">
+                    class="text-orange-500 hover:text-orange-600" target="_blank">
                     <svg class="w-10 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="-143 145 512 512"
                         fill="currentColor">
                         <path
@@ -180,7 +180,7 @@
                     </svg>
                 </a>
                 <a href="https://www.github.com/serkez" aria-label="GitHub"
-                    class="text-orange-500 hover:text-orange-600">
+                    class="text-orange-500 hover:text-orange-600" target="_blank"> 
                     <svg class="w-10 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M12 0C5.372 0 0 5.372 0 12c0 5.302 3.438 9.8 8.205 11.387.6.111.82-.261.82-.577v-2.234c-3.338.726-4.042-1.416-4.042-1.416-.546-1.387-1.333-1.757-1.333-1.757-1.091-.746.083-.731.083-.731 1.205.084 1.838 1.236 1.838 1.236 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.605-2.665-.305-5.466-1.335-5.466-5.93 0-1.31.468-2.38 1.236-3.22-.123-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.3 1.23a11.48 11.48 0 013.003-.404c1.02.004 2.047.138 3.003.404 2.29-1.552 3.297-1.23 3.297-1.23.654 1.653.242 2.874.12 3.176.77.84 1.233 1.91 1.233 3.22 0 4.61-2.807 5.62-5.475 5.92.43.37.823 1.096.823 2.21v3.283c0 .32.216.694.825.576C20.565 21.796 24 17.297 24 12c0-6.628-5.372-12-12-12z" />
