Add profile picture and decrease padding

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="bg-stone-50 py-20">
+    <section class="bg-stone-50 py-12">
         <div class="container mx-auto text-center">
+            <img src="assets\img\profilepic.png" alt="Naomi Serkez" class="w-32 h-32 mx-auto rounded-full">
             <h2 class="text-4xl font-bold text-stone-900">Hi, I'm Naomi</h2>
             <p class="text-stone-600 mt-4">I’m a software engineer, cyber enthusiast, and all around jack(iella?) of all
                 trades.</p>
@@ -45,7 +46,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="py-20">
+    <section id="about" class="py-12">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-stone-800 text-center">About Me</h2>
             <p class="text-stone-600 text-center mt-4">
