--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container mx-auto text-center">
             <img src="assets\img\profilepic.png" alt="Naomi Serkez" class="w-32 h-32 mx-auto rounded-full">
             <h2 class="text-4xl font-bold text-stone-900">Hi, I'm Naomi</h2>
-            <p class="text-stone-600 mt-4">I’m a software engineer, cyber enthusiast, and all around jack(iella?) of all
+            <p class="text-stone-600 mt-4">I’m a software engineer, cyber enthusiast, and a bit of a jack of all
                 trades.</p>
             <a href="#projects"
                 class="mt-6 inline-block bg-orange-500 text-white py-2 px-6 rounded hover:bg-orange-600">See What I've
