Add frum finance and life

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="container mx-auto text-center">
             <img src="assets\img\profilepic.png" alt="Naomi Serkez" class="w-32 h-32 mx-auto rounded-full">
             <h2 class="text-4xl font-bold text-stone-900">Hi, I'm Naomi</h2>
-            <p class="text-stone-600 mt-4">I’m a software engineer, cyber enthusiast, and an all-around Jack of all trades.</p>
+            <p class="text-stone-600 mt-4">I’m a software engineer, cyber enthusiast, and an all-around Jack of all
+                trades.</p>
             <a href="#projects"
                 class="mt-6 inline-block bg-orange-500 text-white py-2 px-6 rounded hover:bg-orange-600">See What I've
                 Done</a>
@@ -56,7 +57,8 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- My accomplishments Section -->
+     <!-- All images/pictures are in 2:1 ratio -->
     <section id="projects" class="bg-stone-50 py-20">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-stone-800 text-center">What I've Done</h2>
@@ -66,12 +68,22 @@
                 <h3 class="text-2xl font-semibold text-stone-800">Work</h3>
                 <div class="grid gap-6 mt-8 sm:grid-cols-2 lg:grid-cols-3">
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
+                        <img src="assets/img/frumfinance.jpg" alt="Frum Finance" class="w-full">
+                        <div class="p-4">
+                            <h3 class="font-bold text-lg">Frum Finance</h3>
+                            <p class="text-stone-600 mt-2">I am a software engineer volunteer at Frum Finance. I am currently working on a new app that will improve user onboarding. </p>
+                            <a href="https://frum.finance" class="text-orange-500 hover:underline mt-2 block"
+                                target="_blank">Visit Frum Finance</a>
+                        </div>
+                    </div>
+                    <div class="bg-white shadow-md rounded-lg overflow-hidden">
                         <img src="assets/img/essential_oil_background.jpeg" alt="Koena" class="w-full">
                         <div class="p-4">
                             <h3 class="font-bold text-lg">Koena Health</h3>
                             <p class="text-stone-600 mt-2">I created the website for a naturopathic company offering
                                 aromatherapy, health, and wellness workshops.</p>
-                            <a href="https://koena.health" class="text-orange-500 hover:underline mt-2 block"  target="_blank">Visit Koena</a>
+                            <a href="https://koena.health" class="text-orange-500 hover:underline mt-2 block"
+                                target="_blank">Visit Koena</a>
                         </div>
                     </div>
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
@@ -122,7 +134,8 @@
                             <h3 class="font-bold text-lg">Naomi's Website</h3>
                             <p class="text-stone-600 mt-2">I created a portfolio website to show the work I've done and
                                 to tell you a bit about me.</p>
-                            <a href="#" class="text-orange-500 hover:underline mt-2 block" id="self-link">View Website</a>
+                            <a href="#" class="text-orange-500 hover:underline mt-2 block" id="self-link">View
+                                Website</a>
                         </div>
                     </div>
 
@@ -147,12 +160,20 @@
                                 class="text-orange-500 hover:underline mt-2 block" target="_blank">View Certificate</a>
                         </div>
                     </div>
-                    <!--  Add up to 3 Continued Learning items
+                    <div class="bg-white shadow-md rounded-lg overflow-hidden">
+                        <img src="assets/img/duck_life_lessons.jpg" alt="Even Ducks have Wisdom to Give" class="w-full">
+                        <div class="p-4">
+                            <h3 class="font-bold text-lg">Life</h3>
+                            <p class="text-stone-600 mt-2">I am always learning from the people around me, the world at large, and my own mistakes. Nothing is too insignificant to learn from.</p>
+                            <a href="https://en.wikipedia.org/wiki/Special:Random"
+                                class="text-orange-500 hover:underline mt-2 block" target="_blank">Learn Something New Today</a>
+                        </div>
+                    </div>
                 </div>
-                <button id="education-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show
-                    More</button>
+                <!-- <button id="education-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show
+                    More</button> -->
                 <div id="education-extra" class="hidden">
-                     Additional Continued Learning items go here -->
+                    Additional Continued Learning items go here -->
                     <!-- </div> -->
                 </div>
             </div>
@@ -180,7 +201,7 @@
                     </svg>
                 </a>
                 <a href="https://www.github.com/serkez" aria-label="GitHub"
-                    class="text-orange-500 hover:text-orange-600" target="_blank"> 
+                    class="text-orange-500 hover:text-orange-600" target="_blank">
                     <svg class="w-10 h-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M12 0C5.372 0 0 5.372 0 12c0 5.302 3.438 9.8 8.205 11.387.6.111.82-.261.82-.577v-2.234c-3.338.726-4.042-1.416-4.042-1.416-.546-1.387-1.333-1.757-1.333-1.757-1.091-.746.083-.731.083-.731 1.205.084 1.838 1.236 1.838 1.236 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.605-2.665-.305-5.466-1.335-5.466-5.93 0-1.31.468-2.38 1.236-3.22-.123-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.3 1.23a11.48 11.48 0 013.003-.404c1.02.004 2.047.138 3.003.404 2.29-1.552 3.297-1.23 3.297-1.23.654 1.653.242 2.874.12 3.176.77.84 1.233 1.91 1.233 3.22 0 4.61-2.807 5.62-5.475 5.92.43.37.823 1.096.823 2.21v3.283c0 .32.216.694.825.576C20.565 21.796 24 17.297 24 12c0-6.628-5.372-12-12-12z" />
