--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <img src="assets/img/essential_oil_background.jpeg" alt="Koena" class="w-full">
                         <div class="p-4">
                             <h3 class="font-bold text-lg">Koena Health</h3>
-                            <p class="text-stone-600 mt-2">I created the website for a naturopathic company offering
+                            <p class="text-stone-600 mt-2">I created and manage the website for a naturopathic company offering
                                 aromatherapy, health, and wellness workshops.</p>
                             <a href="https://koena.health" class="text-orange-500 hover:underline mt-2 block"
                                 target="_blank">Visit Koena</a>
