Make small updates

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container mx-auto text-center">
             <img src="assets\img\profilepic.png" alt="Naomi Serkez" class="w-32 h-32 mx-auto rounded-full">
             <h2 class="text-4xl font-bold text-stone-900">Hi, I'm Naomi</h2>
-            <p class="text-stone-600 mt-4">software engineer by trade, human by birth</p>
+            <p class="text-stone-600 mt-4">...</p>
             <a href="#projects"
                 class="mt-6 inline-block bg-orange-500 text-white py-2 px-6 rounded hover:bg-orange-600">See What I've
                 Done</a>
@@ -50,8 +50,7 @@
             <h2 class="text-3xl font-bold text-stone-800 text-center">About Me</h2>
             <p class="text-stone-600 text-center mt-4">
                 I graduated from Touro University in September 2024 with a degree in Computer Science. I have experience
-                in software engineering, web development, cybersecurity, and more.
-                My passion is solving real-world problems and helping my fellow humans. I plan on changing the world.
+                in software engineering, Tech Support, cybersecurity, and more.
             </p>
         </div>
     </section>
@@ -64,17 +63,8 @@
 
             <!-- Work Section -->
             <div id="work" class="mt-12">
-                <h3 class="text-2xl font-semibold text-stone-800">Work</h3>
+                <h3 class="text-2xl font-semibold text-stone-800">Some of what I've done</h3>
                 <div class="grid gap-6 mt-8 sm:grid-cols-2 lg:grid-cols-3">
-                    <div class="bg-white shadow-md rounded-lg overflow-hidden">
-                        <img src="assets/img/frumfinance.jpg" alt="Frum Finance" class="w-full">
-                        <div class="p-4">
-                            <h3 class="font-bold text-lg">Frum Finance</h3>
-                            <p class="text-stone-600 mt-2">I am a software engineer volunteer at Frum Finance. I am currently working on a new app that will improve user onboarding. </p>
-                            <a href="https://frum.finance" class="text-orange-500 hover:underline mt-2 block"
-                                target="_blank">Visit Frum Finance</a>
-                        </div>
-                    </div>
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
                         <img src="assets/img/essential_oil_background.jpeg" alt="Koena" class="w-full">
                         <div class="p-4">
